# steam-ubisoft-acc-switcher

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js  settings.html  settings.js  steam.js  styles.css  ubisoft.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  steam.rs  ubisoft.rs
