[package]
name = "steam-acc-switcher"
version = "0.1.0"
description = "Steam account switcher for Windows"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
keyvalues-parser = "0.2"
base64 = "0.22"
chrono = "0.4"
sysinfo = "0.30"
